addded mag,zinc
